# SpektrometrC

./: CMakeLists.txt  README.md  Spektrometr.sln
Spektrometr/: HeatmapWindow.cpp  HeatmapWindow.h  Options.cpp  Options.h  Spektrometr.cpp  Spektrometr.h  Spektrometr.qrc  Spektrometr.ui  Spektrometr.vcxproj  Spektrometr.vcxproj.filters  main.cpp  options.json  ui_Spektrometr.h
measurement_data/20260404_004838/: pt_x0_y0_e1.csv  pt_x0_y1_e1.csv  pt_x0_y2_e1.csv  pt_x0_y3.csv  pt_x0_y4.csv  pt_x0_y6.csv  pt_x0_y6_e1.csv  pt_x10_y1.csv  pt_x10_y2_e1.csv  pt_x10_y3_e1.csv  pt_x10_y4.csv  pt_x10_y4_e1.csv  pt_x11_y0.csv  pt_x11_y0_e1.csv  pt_x11_y1_e1.csv  pt_x11_y2_e1.csv  pt_x11_y3_e1.csv  pt_x11_y4.csv  pt_x11_y4_e1.csv  pt_x11_y5_e1.csv  pt_x12_y1.csv  pt_x12_y1_e1.csv  pt_x12_y2.csv  pt_x13_y1.csv  pt_x13_y2.csv  pt_x13_y2_e1.csv  pt_x13_y3.csv  pt_x13_y3_e1.csv  pt_x13_y4_e1.csv  pt_x13_y5.csv  pt_x14_y0_e1.csv  pt_x14_y1.csv  pt_x14_y1_e1.csv  pt_x14_y2.csv  pt_x14_y2_e1.csv  pt_x14_y3.csv  pt_x14_y4.csv  pt_x14_y5_e1.csv  pt_x15_y0.csv  pt_x15_y1.csv  (+103 more)
measurement_data/20260404_004916/: pt_x0_y0.csv  pt_x0_y1.csv  pt_x0_y10.csv  pt_x0_y10_e1.csv  pt_x0_y11.csv  pt_x0_y11_e1.csv  pt_x0_y12.csv  pt_x0_y12_e1.csv  pt_x0_y13.csv  pt_x0_y13_e1.csv  pt_x0_y14.csv  pt_x0_y14_e1.csv  pt_x0_y15.csv  pt_x0_y15_e1.csv  pt_x0_y16.csv  pt_x0_y16_e1.csv  pt_x0_y17.csv  pt_x0_y17_e1.csv  pt_x0_y18.csv  pt_x0_y18_e1.csv  pt_x0_y19.csv  pt_x0_y19_e1.csv  pt_x0_y2.csv  pt_x0_y20.csv  pt_x0_y20_e1.csv  pt_x0_y3_e1.csv  pt_x0_y4_e1.csv  pt_x0_y5.csv  pt_x0_y5_e1.csv  pt_x0_y7.csv  pt_x0_y7_e1.csv  pt_x0_y8.csv  pt_x0_y8_e1.csv  pt_x0_y9.csv  pt_x0_y9_e1.csv  pt_x10_y0.csv  pt_x10_y0_e1.csv  pt_x10_y10.csv  pt_x10_y10_e1.csv  pt_x10_y11.csv  (+699 more)
measurement_data/20260413_120458/: pt_x0_y0.csv  pt_x0_y0_e1.csv  pt_x0_y0_e2.csv  pt_x0_y0_e3.csv  pt_x10_y0.csv  pt_x10_y0_e1.csv  pt_x10_y0_e2.csv  pt_x10_y0_e3.csv  pt_x10_y1.csv  pt_x10_y1_e1.csv  pt_x10_y1_e2.csv  pt_x10_y1_e3.csv  pt_x11_y0.csv  pt_x11_y0_e1.csv  pt_x11_y0_e2.csv  pt_x11_y0_e3.csv  pt_x11_y1.csv  pt_x11_y1_e1.csv  pt_x11_y1_e2.csv  pt_x11_y1_e3.csv  pt_x12_y0.csv  pt_x12_y0_e1.csv  pt_x12_y0_e2.csv  pt_x12_y0_e3.csv  pt_x12_y1.csv  pt_x12_y1_e1.csv  pt_x12_y1_e2.csv  pt_x12_y1_e3.csv  pt_x13_y0.csv  pt_x13_y0_e1.csv  pt_x13_y0_e2.csv  pt_x13_y0_e3.csv  pt_x13_y1.csv  pt_x13_y1_e1.csv  pt_x13_y1_e2.csv  pt_x13_y1_e3.csv  pt_x14_y0.csv  pt_x14_y0_e1.csv  pt_x14_y0_e2.csv  pt_x14_y0_e3.csv  (+114 more)
measurement_data/20260413_123020/: pt_x0_y0.csv  pt_x0_y0_e1.csv  pt_x0_y0_e2.csv  pt_x0_y0_e3.csv  pt_x0_y1.csv  pt_x0_y1_e1.csv  pt_x0_y1_e2.csv  pt_x0_y1_e3.csv  pt_x0_y2.csv  pt_x0_y2_e1.csv  pt_x0_y2_e2.csv  pt_x0_y2_e3.csv  pt_x0_y3.csv  pt_x0_y3_e1.csv  pt_x0_y3_e2.csv  pt_x0_y3_e3.csv  pt_x0_y4.csv  pt_x0_y4_e1.csv  pt_x0_y4_e2.csv  pt_x0_y4_e3.csv  pt_x10_y0.csv  pt_x10_y0_e1.csv  pt_x10_y0_e2.csv  pt_x10_y0_e3.csv  pt_x10_y1.csv  pt_x10_y1_e1.csv  pt_x10_y1_e2.csv  pt_x10_y1_e3.csv  pt_x10_y2.csv  pt_x10_y2_e1.csv  pt_x10_y2_e2.csv  pt_x10_y2_e3.csv  pt_x10_y3.csv  pt_x10_y3_e1.csv  pt_x10_y3_e2.csv  pt_x10_y3_e3.csv  pt_x10_y4.csv  pt_x10_y4_e1.csv  pt_x10_y4_e2.csv  pt_x10_y4_e3.csv  (+442 more)
measurement_data/20260413_131137/: pt_x0_y0.csv  pt_x0_y0_e1.csv  pt_x0_y0_e2.csv  pt_x0_y1.csv  pt_x0_y10.csv  pt_x0_y10_e1.csv  pt_x0_y10_e2.csv  pt_x0_y11.csv  pt_x0_y11_e1.csv  pt_x0_y11_e2.csv  pt_x0_y12.csv  pt_x0_y12_e1.csv  pt_x0_y12_e2.csv  pt_x0_y13.csv  pt_x0_y13_e1.csv  pt_x0_y13_e2.csv  pt_x0_y14.csv  pt_x0_y14_e1.csv  pt_x0_y14_e2.csv  pt_x0_y15.csv  pt_x0_y15_e1.csv  pt_x0_y15_e2.csv  pt_x0_y16.csv  pt_x0_y16_e1.csv  pt_x0_y16_e2.csv  pt_x0_y17.csv  pt_x0_y17_e1.csv  pt_x0_y17_e2.csv  pt_x0_y18.csv  pt_x0_y18_e1.csv  pt_x0_y18_e2.csv  pt_x0_y19.csv  pt_x0_y19_e1.csv  pt_x0_y19_e2.csv  pt_x0_y1_e1.csv  pt_x0_y1_e2.csv  pt_x0_y2.csv  pt_x0_y20.csv  pt_x0_y20_e1.csv  pt_x0_y20_e2.csv  (+1283 more)
measurement_data/20260413_145942/: pt_x0_y0.csv  pt_x0_y0_e1.csv  pt_x0_y0_e2.csv  pt_x0_y0_e3.csv  pt_x0_y0_e4.csv  pt_x0_y1.csv  pt_x0_y1_e1.csv  pt_x0_y1_e2.csv  pt_x0_y1_e3.csv  pt_x0_y1_e4.csv  pt_x0_y2.csv  pt_x0_y2_e1.csv  pt_x0_y2_e2.csv  pt_x0_y2_e3.csv  pt_x0_y2_e4.csv  pt_x10_y0.csv  pt_x10_y0_e1.csv  pt_x10_y0_e2.csv  pt_x10_y0_e3.csv  pt_x10_y0_e4.csv  pt_x10_y1.csv  pt_x10_y1_e1.csv  pt_x10_y1_e2.csv  pt_x10_y1_e3.csv  pt_x10_y1_e4.csv  pt_x10_y2.csv  pt_x10_y2_e1.csv  pt_x10_y2_e2.csv  pt_x10_y2_e3.csv  pt_x10_y2_e4.csv  pt_x11_y0.csv  pt_x11_y0_e1.csv  pt_x11_y0_e2.csv  pt_x11_y0_e3.csv  pt_x11_y0_e4.csv  pt_x11_y1.csv  pt_x11_y1_e1.csv  pt_x11_y1_e2.csv  pt_x11_y1_e3.csv  pt_x11_y1_e4.csv  (+238 more)
measurement_data/scan_20260310_122739/: progress.json
measurement_data/scan_20260310_123051/: progress.json
measurement_data/scan_20260310_123750/: progress.json
measurement_data/scan_20260310_123948/: progress.json
measurement_data/scan_20260310_123956/: progress.json
measurement_data/scan_20260310_124814/: progress.json
measurement_data/scan_20260310_131709/: progress.json  pt_x0_y0.csv  pt_x0_y1.csv  pt_x0_y10.csv  pt_x0_y2.csv  pt_x0_y3.csv  pt_x0_y4.csv  pt_x0_y5.csv  pt_x0_y6.csv  pt_x0_y7.csv  pt_x0_y8.csv  pt_x0_y9.csv  pt_x10_y0.csv  pt_x10_y1.csv  pt_x10_y10.csv  pt_x10_y2.csv  pt_x10_y3.csv  pt_x10_y4.csv  pt_x10_y5.csv  pt_x10_y6.csv  pt_x10_y7.csv  pt_x10_y8.csv  pt_x10_y9.csv  pt_x1_y0.csv  pt_x1_y1.csv  pt_x1_y10.csv  pt_x1_y2.csv  pt_x1_y3.csv  pt_x1_y4.csv  pt_x1_y5.csv  pt_x1_y6.csv  pt_x1_y7.csv  pt_x1_y8.csv  pt_x1_y9.csv  pt_x2_y0.csv  pt_x2_y1.csv  pt_x2_y10.csv  pt_x2_y2.csv  pt_x2_y3.csv  pt_x2_y4.csv  (+82 more)
measurement_data/scan_20260310_132152/: progress.json
measurement_data/scan_20260310_132158/: progress.json
measurement_data/scan_20260310_132419/: progress.json  pt_x0_y0.csv  pt_x0_y1.csv  pt_x0_y10.csv  pt_x0_y11.csv  pt_x0_y12.csv  pt_x0_y13.csv  pt_x0_y14.csv  pt_x0_y15.csv  pt_x0_y16.csv  pt_x0_y17.csv  pt_x0_y18.csv  pt_x0_y19.csv  pt_x0_y2.csv  pt_x0_y20.csv  pt_x0_y21.csv  (+2480 more)
(+7813 files in other folders)
